Fixes z-index bugs

--- a/style/less/site.less
+++ b/style/less/site.less
@@ -17,7 +17,7 @@ body {
 
 header {
 	position: fixed;
-	z-index: 2;
+	z-index: 10;
 	width: 100%;
 	left: 0;
 	top: 0;
@@ -281,7 +281,7 @@ textarea {
 
 .media {
 	position: fixed;
-	z-index: 2;
+	z-index: 10;
 	left: 0;
 	top: 50vh;
 	width: @gutter;
@@ -447,7 +447,7 @@ textarea {
 	margin-left: @gutter;
 	height:	0;
 	width: calc(~'50vw -' @gutter);
-	z-index: 3;
+	z-index: 2;
 }
 
 .motio-vertical {
@@ -587,6 +587,6 @@ textarea {
 }
 
 .dot-transition {
-	z-index: 1;
+	z-index: 5;
 	position: fixed;
 }
